Updated spacing for ErrorMessage and fixed anti-patterns

--- a/front-end/src/atoms/ErrorMessage.css
+++ b/front-end/src/atoms/ErrorMessage.css
@@ -1,7 +1,6 @@
-.ErrorMessage{
+#ErrorMessage{
     color: red;
-    padding-top: 0;
-    padding-bottom: 0;
     font-style: italic;
     font-size: 14px;
+    margin-left: 15px;
 }
