--- a/front-end/src/organisms/WorkspaceSettings.css
+++ b/front-end/src/organisms/WorkspaceSettings.css
@@ -77,6 +77,7 @@
     font-weight: 500;
     font-size: 16px;
     margin-left: 15px;
+    margin-bottom: 10px;
     padding-top: 10px;
 }
 
@@ -101,7 +102,9 @@
     border-radius: 4px;
     padding: 10px;
     margin: 10px;
+    margin-top: 0;
 }
+
 .WorkspaceSettings-add-collab-icon {
     margin-left: 5px;
     margin-right: 15px;
